--- a/public/_assets/scss/pages/_blog-post.scss
+++ b/public/_assets/scss/pages/_blog-post.scss
@@ -57,7 +57,7 @@
         align-self: flex-start; // don't take up full width
 
         padding: var(--spacing-025);
-        background-color: var(--color-primary-lo-contrast);
+        background-color: var(--color-primary);
 
         color: var(--color-background);
 
