--- a/public/_assets/scss/themes/_light.scss
+++ b/public/_assets/scss/themes/_light.scss
@@ -2,7 +2,7 @@
     color-scheme: light;
 
     --color-primary: #c43162; /*                  rose red              */
-    --color-primary-lo-contrast: #e296ae; /*      amaranth pink         */
+    --color-primary-lo-contrast: #d36488; /*      amaranth pink         */
     --color-primary-hi-contrast: #932550; /*      quinacridone magenta  */
 
     --color-secondary: #4f9c86; /*                zomp                  */
